[package]
name = "factorio-cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
quinn = "0.11"
quinn-proto = { version = "0.11", default-features = false }
rustls = { version = "0.23", default-features = false }
argh = "0.1"
serde = "1.0"
rmp-serde = "1.3.0"
bytes = "1.0"
zip = "2.0"
miniz_oxide = "0.8"
zstd = "0.13"
blake3 = "1.0"
hashlink = "0.9"
anyhow = "1.0"
bitflags = "2.0"
crc = "3.0"
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ["macros"] }
socket2 = "0.5"