[package]
name = "factorio-cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
quinn = "0.11"
quinn-proto = { version = "0.11", default-features = false }
rustls = { version = "0.23", default-features = false }
argh = "0.1"
serde = "1.0"
serde_bytes = "0.11"
rmp-serde = "1.3.0"
bytes = { version = "1.0", features = ["serde"] }
zip = { version = "2.0", default-features = false, features = ["deflate", "zstd"] }
miniz_oxide = { version = "=0.8.0", features = ["std"] }
zstd = "0.13"
blake3 = { version = "1.0", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
bitflags = "2.0"
crc = "3.0"
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ["macros"] }
