[workspace]
resolver = "3"
members = ["common", "dsp-nebula-cacher", "factorio-cacher"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
quinn = { version = "0.11", default-features = false, features = ["log", "runtime-tokio", "rustls-ring"] }
quinn-proto = { version = "0.11", default-features = false }
rustls = { version = "0.23", default-features = false }
argh = "0.1"
serde = "1.0"
serde_bytes = "0.11"
rmp-serde = "1.3.0"
bytes = { version = "1.0", features = ["serde"] }
zstd = "0.13"
blake3 = { version = "1.0", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ["macros"] }
hashlink = "0.10"
hex-literal = "1.0"
igd-next = { version = "0.16" }
