[package]
name = "dsp-nebula-cacher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
quinn.workspace = true
argh.workspace = true
serde.workspace = true
bytes.workspace = true
futures-util.workspace = true
anyhow.workspace = true
log.workspace = true
hex-literal.workspace = true

common = { path = "../common" }

fastwebsockets = { version = "0.10", features = ["upgrade", "unstable-split"] }
hyper = { version = "1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
lz4_flex = "0.11"
twox-hash = "2.0"

[dev-dependencies]
fastrand.workspace = true
