[package]
name = "factorio-cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
quinn.workspace = true
argh.workspace = true
serde.workspace = true
rmp-serde.workspace = true
bytes.workspace = true
blake3.workspace = true
anyhow.workspace = true
log.workspace = true

common = { path = "../common" }

quinn-proto = { version = "0.11", default-features = false }
zip = { version = "3.0", default-features = false, features = ["deflate", "zstd"] }
miniz_oxide = { version = "0.8.0", features = ["std"] }
bitflags = "2.0"
crc = "3.0"
memchr = "2.0"
